tests/paczka1/small_fuzzy/96140569.err
Error in line 7: S34 S171 28,4
Error in line 15: 6qq7o1n0 A586 81,9
